# gitlab-ci-cd

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/calc/: calc.h
programa/: CMakeLists.txt  main.cpp
src/: calc.cpp
test/: CMakeLists.txt
test/test_01/: test.cpp
